deployment/ECR-Nginx-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp-ecr
  labels:
    app: kubeapp-ecr
spec:
  replicas: 2
  selector:
   matchLabels:
      app: kubeapp-ecr
  template:
    metadata:
      labels:
        app: kubeapp-ecr
    spec:
      containers:
      - name: kubeapp-ecr
        image: 553686865554.dkr.ecr.eu-west-1.amazonaws.com/k8s_demo:3
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
          - containerPort: 80
