deployment/ECR-Nginx-ALB-IngressService.yml
#03-ECR-Nginx-ALB-IngressService.yml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ecr-ingress-service
  labels:
   app: kubeapp-ecr
  annotations:
   # Ingress Core Settings  
   kubernetes.io/ingress.class: "alb"
   alb.ingress.kubernetes.io/scheme: internet-facing
   # Health Check Settings
   alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
   alb.ingress.kubernetes.io/healthcheck-port: traffic-port
   alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
   alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
   alb.ingress.kubernetes.io/success-codes: '200'
   alb.ingress.kubernetes.io/healthy-threshold-count: '2'
   alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
   ## SSL Settings
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
   alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:180789647333:certificate/9f042b5d-86fd-4fad-96d0-c81c5abc71e1
   #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
   # SSL Redirect Setting
   alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'   
   # External DNS - For creating a Record Set in Route53
   external-dns.alpha.kubernetes.io/hostname: ecrdemo.kubeoncloud.com       
spec:
  rules:
  - http:
     paths:
     - path: /* # SSL Redirect Setting
       backend:
        serviceName: ssl-redirect
        servicePort: use-annotation            
     - path: /*
       backend:
        serviceName: kubeapp-ecr-nodeport-service
        servicePort: 80                                   
# Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.
